# chunker_Web

./: .editorconfig  .gitattributes  .gitignore  2025_11_09_CHTGPT_git_issues.md  2025_11_09_claude_code_prompt_chunker.txt  2025_11_09_cursor_can_you_fetch_the_updated_from_g.md  2025_11_09_cursor_stabilize_watcher_and_kb_pipelin.md  CHANGELOG.md  CLAUDE_CODE_TASK_PROMPT.md  CLAUDE_GUI_COLLABORATION_PROMPT.md  Chunker_MoveOptimized.bat  Chunker_MoveOptimized.ps1  Cursor_Prompt_Blindspots_Enhancement.md  DATABASE_IMPROVEMENTS.md  ENTERPRISE_CHUNKER_SUMMARY.md  FIXES_APPLIED_SUMMARY.md  GIT_SETUP_STATUS.md  GROK_COLLABORATION_PROMPT.md  GROK_HNSW_FIX_PROMPT.md  GROK_IMPLEMENTATION_GUIDE.md  GROK_REVIEW_PACKAGE.md  HANDOFF_PROMPT.md  IMPLEMENTATION_STATUS.md  LOG_REVIEW_AND_FIXES.md  MONITOR_DB_LOCKS.md  MOVE_WORKFLOW_IMPLEMENTATION.md  PYTHON_PROCESSING_FIX.md  QUICK_START.md  QUICK_START_ENHANCEMENTS.md  QUICK_START_PROMPT.md  README.md  README_ENHANCED.md  RECOVERY_SUCCESS.md  REPOSITORY_STRUCTURE.md  REPROCESSING_RUN_PLAN.md  SUMMARY.md  TASK_PROGRESS_REPORT.md  UPDATE_SUMMARY_2025-11-08.md  VERIFICATION_REPORT.md  advanced_celery_config.py  (+69 more)
.claude/: settings.local.json
.github/: CODEOWNERS  pull_request_template.md
02_data/: 2025_10_30_23_58_41_claude_code_chat_log_context_input.md  2025_10_30_23_58_41_claude_code_chat_log_context_input.md.origin.json  QUICK_REFERENCE.md.origin.json  department_specific_vba_template.txt  pyproject.toml
06_config/: file_versions.json
99_doc/: 01_Python Script Claude API Integration.md  20250814_172920_README_1.md  (+492 more)
(+839 files in other folders)
