[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project-folder-analyzer"
version = "1.0.0"
description = "CLI tool to scan and analyze folder structures with previews and reports"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = "MIT"
dependencies = ["pandas", "tqdm"]

[project.scripts]
analyze-folder = "project_folder_analyzer:main"
